Added Railo to supported CFML engines Fixed spelling of Directory. Surprised no one but Tom Botts noticed this. Thanks Tom!
Signed-off-by: NathanStrutz <strutz@gmail.com>

--- a/README
+++ b/README
@@ -10,4 +10,4 @@ Download it. Run it. It will ask for a path (defaulting to what it thinks is you
 
 Requirements:
 -------------
-ColdFusion 8
+ColdFusion 8 or Railo 3
